--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next-image-export-optimizer ",
-    "export": "next build && next export  && npm run replacePath && next-image-export-optimizer ",
+    "build": "next build",
+    "export": "next build && next export && npm run replacePath",
     "lint": "next lint",
     "replacePath": "node replacer"
   },
@@ -15,7 +15,6 @@
     "chart.js": "^4.4.8",
     "framer-motion": "^12.5.0",
     "next": "^15.2.2",
-    "next-image-export-optimizer": "^0.15.2",
     "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
